# packages/api-client/openapi/openapi.json
@@ -205,7 +205,7 @@
         ]
       }
     },
-    "/api/risk/tiles/{z}/{x}/{y}": {
+    "/api/risk/tiles/{z}/{x}/{y}.mvt": {
       "get": {
         "operationId": "RiskIntelligenceController_getTiles",
         "parameters": [
@@ -214,7 +214,7 @@
             "required": true,
             "in": "path",
             "schema": {
-              "type": "number"
+              "type": "string"
             }
           },
           {
@@ -222,7 +222,7 @@
             "required": true,
             "in": "path",
             "schema": {
-              "type": "number"
+              "type": "string"
             }
           },
           {
@@ -230,7 +230,7 @@
             "required": true,
             "in": "path",
             "schema": {
-              "type": "number"
+              "type": "string"
             }
           }
         ],
